fluxcd/infrastructure/configs/overlays/production/istio-policies/temple-of-time/allow-open-webui-to-open-webui-sentinel.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-open-webui-to-open-webui-sentinel
spec:
  selector:
    matchLabels:
      app: open-webui-sentinel
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/temple-of-time/sa/open-webui
              - cluster.local/ns/temple-of-time/sa/open-webui-sentinel
      to:
        - operation:
            ports: ["26379"]
